# INFERNO

./: .gitignore  README.md  build-packages.sh  index.html  install-deps.sh  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
packaging/: 99-inferno-usb.rules  inferno-usb-forge.desktop
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: inferno-logo.png.ts  logo.ts
src/components/: AdvancedOptions.tsx  DriveHealth.tsx  DriveTools.tsx  HashVerifier.tsx  ISOSelector.tsx  InfernoLogo.tsx  PartitionOptions.tsx  PowerFeatures.tsx  ProgressPanel.tsx  SectionPanel.tsx  SettingsPanel.tsx  StatusIndicator.tsx  SystemDeps.tsx  USBDriveSelector.tsx
src/i18n/: index.tsx  translations.ts
src/lib/: api.ts
src/pages/: Index.tsx  NotFound.tsx
